Thu Mar  2 22:46:51 CET 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/dcc-window.c:
	* data/dcc-accept.glade:
	* data/Makefile.am:
	  - Use GtkMessageDialog instead of Glade. (#333178)

Tue Feb 28 18:30:25 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/main-window.h:
	* src/fe-gnome/apps_xchat.schemas.in:
	  - Save and restore the position of the main window, since metacity
	    is absolutely refusing to do this for us, even though we're
	    technically session-managed.

Tue Feb 28 18:06:12 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	  - Actually hook up "show colors" option.

Tue Feb 28 15:38:40 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Pop the list up 10 pixels to the right of the mouse button, rather
	    than 100 pixels to the left.  This should prevent the pop-up
	    overlapping the "Users" button in all but the most pathological
	    cases, for users who don't realize that they can click anywhere
	    rather than only on the button.

Tue Feb 28 15:32:15 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/plugins.c:
	  - Guard against loading plugins multiple times (#328907)

Tue Feb 28 15:09:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Fix output when checking for libnotify

Tue Feb 28 05:48:41 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	  - Only send part messages when a channel is being left (rather than
	    closed), since the core was sending one as well.  This fixes the
	    spurious "You're not on that channel" messages. (#332041)

Fri Feb 24 15:09:56 MST 2006  Brian Pepple <bdpepple@gmail.com>

	* plugins/autoaway/gscreensaver.c:
	  - Update for new gnome-screensaver object ID.

Fri Feb 24 05:12:34 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.11svn
