@@ -117,7 +117,7 @@ It's like a balloon, and something bad happens!</property>
 
 <widget class="GtkDialog" id="nickname dialog">
   <property name="border_width">6</property>
-  <property name="title" translatable="yes">Enter a new nickname</property>
+  <property name="title" translatable="yes">Nickname</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">True</property>
@@ -230,10 +230,29 @@ It's like a balloon, and something bad happens!</property>
 	  </child>
 
 	  <child>
-	    <widget class="GtkCheckButton" id="nickname dialog check">
+	    <widget class="GtkCheckButton" id="nickname dialog away">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">on all servers</property>
+	      <property name="label" translatable="yes">Mark as _away</property>
+	      <property name="use_underline">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
+	      <property name="active">False</property>
+	      <property name="inconsistent">False</property>
+	      <property name="draw_indicator">True</property>
+	    </widget>
+	    <packing>
+	      <property name="padding">0</property>
+	      <property name="expand">False</property>
+	      <property name="fill">False</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkCheckButton" id="nickname dialog all">
+	      <property name="visible">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label" translatable="yes">Apply on a_ll servers</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
